# auto_trade

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
backtest/: Dockerfile  main.py  requirements.txt
backtest/app/: config.yml  settings.py
backtest/app/controllers/: socket_server.py
backtest/app/models/: base.py  candlesticks.py
backtest/app/oanda/: oanda.py  utils.py
client_server/: main.py
client_server/controllers/: socket_client.py
fx_trading/: config.yml  main.py  requirements.txt  settings.py
fx_trading/oanda/: oanda.py
websocket/: requirements.txt
