[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "auto_trade"
version = "0.4.4"
readme = "README.md"
description = "Data transfer using Oanda API"
authors = [{name = "syuya-tanaka", email = "masafumihorie0420@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]

[project.optional-dependencies]
backtesting = "^0.3.3"
flask = "^2.3.2"
sqlalchemy = "^1.4.41"
psycopg2-binary = "^2.9.6"
envyaml = "^1.10.211231"

